# aac

./: CMakeLists.txt  clique-0.txt  clique_1.txt  clique_2.txt  clique_3.txt  common_submultigraph_1.txt  common_submultigraph_2.txt  common_submultigraph_3.txt  graph_edit_distance_1.txt  graph_edit_distance_2.txt  graph_edit_distance_3.txt  graph_solution_2.h  graph_solution_2_polynomial_approximation.h  graph_solution_3.h  graph_solution_3_optimized_bruteforce.h  graph_solution_3_polynomial_approximation.h  graph_solution_4.h  graph_solution_4_polynomial_approximation.h  graph_utils.h  main.cpp  mgraph1.txt  mgraph2.txt  mgraph3.txt  mgtest-0.txt  mgtest-1.txt  mgtest-2.txt  multigraph_generator.h
